package Lesson11.interfaceexample;

public class OracleDbProvider implements DbProvider {

    @Override
    public void connectToDb() {

    }

    @Override
    public void disconnectFromDb() {

    }

    @Override
    public void encryptData() {

    }
}
