package lesson11.interfaceexample;

public interface DbProvider {

    void connectToDb();

    void disconnectFromDb();

    void encryptData ();
}

