@startuml

title __INTERFACEEXAMPLE's Class Diagram__\n

  package lesson1 {
    package lesson11.interfaceexample {
      interface DbProvider {
          {abstract} + connectToDb()
          {abstract} + disconnectFromDb()
          {abstract} + encryptData()
      }
    }
  }
  

  package lesson1 {
    package lesson11.interfaceexample {
      class MySQLProvider {
          + connectToDb()
          + disconnectFromDb()
          + encryptData()
      }
    }
  }
  

  package lesson1 {
    package lesson11.interfaceexample {
      class OracleDbProvider {
          + connectToDb()
          + disconnectFromDb()
          + encryptData()
      }
    }
  }
  

  package lesson1 {
    package lesson11.interfaceexample {
      class PostgreSQLDbProvider {
          + connectToDb()
          + disconnectFromDb()
          + encryptData()
      }
    }
  }
  

  MySQLProvider -up-|> DbProvider
  OracleDbProvider -up-|> DbProvider
  PostgreSQLDbProvider -up-|> DbProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
